--- a/docs/assets/css/extra.css
+++ b/docs/assets/css/extra.css
@@ -41,3 +41,22 @@
   .badge-square {
     border-radius: 2px;
   }
+
+
+  .video-wrapper {
+    position: relative;
+    display: block;
+    height: 0;
+    padding: 0;
+    overflow: hidden;
+    padding-bottom: 56.25%;
+  }
+  .video-wrapper > iframe {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
